fix: Text overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@ nav a:focus {
     background-repeat: no-repeat;
     background-position: center;
     padding: 0;
-    min-height: 45vh;
+    min-height: 60vh;
     display: flex;
     align-items: flex-end;
     position: relative;
